final.css
body {
  background: linear-gradient(to right, rgba(110,110,110,1) 0%, rgba(189,189,189,1) 25%, rgba(214,214,214,1) 50%, rgba(189,189,189,1) 75%, rgba(110,110,110,1) 100%);
  font-family: 'Open Sans', sans-serif;
}

.container {
  width: 1200px;
  margin: 20px auto auto auto;
}

.viewer {
  display: flex;
  box-shadow: 0px 7px 33px -4px rgba(0,0,0,0.75);
}

.viewer button {
  width: 100px;
  height: 100%;
}

.picture {
  background-color: black;
  width: 1000px;
  height: 670px;
  display: flex;
  position: relative;
}

.picture img {
  max-height: 670px;
  width: 100%;
  margin: auto;
}

.gray-container {
  background-color: rgba(0,0,0,0.5);
  color: white;
  height: 160px;
  width: 940px;
  padding: 0 30px;
  position: absolute;
  bottom: 0px;
  z-index: 5;
}

#photo-title {
  font-size: 1.4rem;
  opacity: 1;
  padding: 0;
  margin: 5px 0;
}

#photo-description {
  font-size: 1.3rem;
  opacity: 0.6;
  padding-top: 0;
  margin-top: 5px;
}

#back {
  transition: all ease 200ms;
}

#back:hover {
  box-shadow: 0px 3px 47px 12px rgb(119, 119, 119);
}

#back:hover img{
  opacity: 0.4;
}

#forward {
  transition: all ease 200ms;
}

#forward img {
  transform: rotate(0.5turn);
}

#forward:hover {
  box-shadow: 0px 3px 47px 12px rgb(119, 119, 119);
}

#forward:hover img{
  opacity: 0.4;
}

.thumbnails {
  width: 100%;
  display: flex;
  margin-top: 20px;
  justify-content: center;
}

.thumbnail {
  background-color: rgb(226, 226, 226);
  box-shadow: 0px 9px 15px -3px rgba(0,0,0,1);
  height: 70px;
  padding: 4px;
  margin: 4px;
  position: relative;
  transition: all ease 300ms;
}

.thumbnail:hover {
  box-shadow: 0px 25px 20px -3px rgba(0,0,0,0.75);
  transform: scale(1.3) translate(0,-25%);
  z-index: 5;
}

.thumbnail-img {
  height: 100%;
}

.selected {
  box-shadow: 0px 13px 20px -3px rgba(0,0,0,0.75);
  transform: scale(1.2) translate(0,-15%);
  z-index: 5;
}

.thumbnail-title {
  background-color: black;
  border-radius: 3px;
  position: absolute;
  width: 150%;
  visibility: hidden;
  height: 30px;
  top: -40px;
  left: -25%;
  box-shadow: 0px 13px 20px -3px rgba(0,0,0,0.75);
  z-index: 5;
}

.thumbnail-title h6 {
  width: 100%;
  color: white;
  position: absolute;
  top: -18px;
  text-align: center;
}

.thumbnail:hover .thumbnail-title {
  visibility: visible;
}

